# gpt-implementation

./: README.md  checkpoint.pth  pyproject.toml  tokenizer.json
src/: checkpointing.py  ignore_file.py  main.py  test.ipynb  train.py
src/data/: dataset.py  tokenizer.pkl  tokenizer.py
src/model/: layers.py  model.py
tests/: test_main.py
