[project]
name = "gpt-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

